--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ DEBUG = True
 
 # database credentials
 
-DB_ENGINE = django.db.backends.postgresql
-DB_NAME = loqznew_db
-DB_USER = loqznew_dbuser
-DB_PASSWORD = loqznew@kdy123
-DB_HOST = localhost
+# DB_ENGINE = django.db.backends.postgresql
+# DB_NAME = loqznew_db
+# DB_USER = loqznew_dbuser
+# DB_PASSWORD = loqznew@kdy123
+# DB_HOST = localhost
 
